--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -143,13 +143,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="256dp"
         android:layout_toStartOf="@+id/sendButton"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/LogoImage"
         app:layout_constraintTop_toBottomOf="@+id/LogoImage"
-        android:autofillHints=""
         tools:ignore="LabelFor" />
 
     <Button
