--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -6,198 +6,293 @@
     android:layout_height="match_parent"
     android:background="#0E4502"
     android:foregroundTint="#ECE8E8"
-    tools:context=".TableActivity">
+    tools:context="UTD.cs.edu.pocket_poker.TableActivity">
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="75dp"
-        android:layout_height="66dp"
-        tools:layout_editor_absoluteX="244dp"
-        tools:layout_editor_absoluteY="7dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="26dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/imageView12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/foldBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="15dp"
         android:backgroundTint="#D30000"
         android:text="Fold"
-        tools:layout_editor_absoluteX="444dp"
-        tools:layout_editor_absoluteY="348dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/raiseBtn"
+        app:layout_constraintStart_toEndOf="@+id/imageView17" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/raiseBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="9dp"
         android:backgroundTint="#818589"
         android:text="Raise"
-        tools:layout_editor_absoluteX="540dp"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/foldBtn"
+        app:layout_constraintEnd_toStartOf="@+id/callBtn"
+        app:layout_constraintStart_toEndOf="@+id/foldBtn" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/callBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#818589"
         android:text="Call"
-        tools:layout_editor_absoluteX="637dp"
-        tools:layout_editor_absoluteY="347dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/raiseBtn" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="75dp"
-        android:layout_height="66dp"
-        tools:layout_editor_absoluteX="653dp"
-        tools:layout_editor_absoluteY="159dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/imageView14"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="75dp"
         android:layout_height="66dp"
-        tools:layout_editor_absoluteX="253dp"
-        tools:layout_editor_absoluteY="310dp"
+        android:layout_marginStart="253dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="253dp"
+        android:layout_marginBottom="29dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/imageView14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView15"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="75dp"
+        android:layout_width="0dp"
         android:layout_height="66dp"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="172dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="580dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="275dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="6dp"
         android:text="You"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="275dp"
-        tools:layout_editor_absoluteY="386dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView16"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="5dp"
         android:text="Player 1"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="11dp"
-        tools:layout_editor_absoluteY="243dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="23dp"
         android:text="Player 2"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="251dp"
-        tools:layout_editor_absoluteY="73dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="@+id/imageView3" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="147dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="147dp"
         android:text="Player 3"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="658dp"
-        tools:layout_editor_absoluteY="229dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/callBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="77dp"
+        android:layout_width="0dp"
         android:layout_height="78dp"
-        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw"
-        tools:layout_editor_absoluteX="312dp"
-        tools:layout_editor_absoluteY="37dp" />
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="37dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
+        app:layout_constraintEnd_toEndOf="@+id/imageView11"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="105dp"
+        android:layout_width="0dp"
         android:layout_height="78dp"
-        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw"
-        tools:layout_editor_absoluteX="515dp"
-        tools:layout_editor_absoluteY="82dp" />
+        android:layout_marginTop="82dp"
+        android:layout_marginEnd="33dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView10"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw" />
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="105dp"
+        android:layout_width="0dp"
         android:layout_height="78dp"
-        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="200dp" />
+        android:layout_marginStart="46dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/imageView10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="77dp"
+        android:layout_width="0dp"
         android:layout_height="62dp"
-        app:srcCompat="@drawable/ace_of_clubs"
-        tools:layout_editor_absoluteX="75dp"
-        tools:layout_editor_absoluteY="207dp" />
+        android:layout_marginStart="13dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/imageView10"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ace_of_clubs" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="77dp"
+        android:layout_width="0dp"
         android:layout_height="62dp"
-        app:srcCompat="@drawable/eight_of_spades"
-        tools:layout_editor_absoluteX="91dp"
-        tools:layout_editor_absoluteY="207dp" />
+        android:layout_marginEnd="347dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/imageView7"
+        app:layout_constraintStart_toEndOf="@+id/imageView8"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/eight_of_spades" />
 
     <ImageView
         android:id="@+id/imageView11"
         android:layout_width="72dp"
-        android:layout_height="62dp"
-        app:srcCompat="@drawable/seven_of_clubs"
-        tools:layout_editor_absoluteX="328dp"
-        tools:layout_editor_absoluteY="44dp" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView12"
+        app:srcCompat="@drawable/seven_of_clubs" />
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="77dp"
-        android:layout_height="62dp"
-        app:srcCompat="@drawable/nine_of_diamonds"
-        tools:layout_editor_absoluteX="345dp"
-        tools:layout_editor_absoluteY="44dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="309dp"
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/nine_of_diamonds" />
 
     <ImageView
         android:id="@+id/imageView13"
-        android:layout_width="77dp"
+        android:layout_width="0dp"
         android:layout_height="62dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="21dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintEnd_toEndOf="@+id/imageView14"
+        app:layout_constraintStart_toStartOf="@+id/raiseBtn"
         app:layout_constraintTop_toTopOf="@+id/imageView7"
-        app:srcCompat="@drawable/jack_of_clubs"
-        tools:layout_editor_absoluteX="560dp" />
+        app:srcCompat="@drawable/jack_of_clubs" />
 
     <ImageView
         android:id="@+id/imageView14"
         android:layout_width="77dp"
-        android:layout_height="62dp"
-        app:srcCompat="@drawable/three_of_diamonds"
-        tools:layout_editor_absoluteX="581dp"
-        tools:layout_editor_absoluteY="92dp" />
+        android:layout_height="0dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintEnd_toEndOf="@+id/imageView7"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView13"
+        app:srcCompat="@drawable/three_of_diamonds" />
 
     <ImageView
         android:id="@+id/imageView15"
         android:layout_width="77dp"
-        android:layout_height="62dp"
-        app:srcCompat="@drawable/queen_of_hearts"
-        tools:layout_editor_absoluteX="327dp"
-        tools:layout_editor_absoluteY="286dp" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
+        app:layout_constraintEnd_toStartOf="@+id/imageView17"
+        app:layout_constraintStart_toStartOf="@+id/imageView17"
+        app:layout_constraintTop_toTopOf="@+id/imageView16"
+        app:srcCompat="@drawable/queen_of_hearts" />
 
     <ImageView
         android:id="@+id/imageView16"
-        android:layout_width="77dp"
-        android:layout_height="62dp"
-        app:srcCompat="@drawable/king_of_hearts"
-        tools:layout_editor_absoluteX="345dp"
-        tools:layout_editor_absoluteY="286dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
+        app:layout_constraintEnd_toStartOf="@+id/imageView17"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/imageView17"
+        app:srcCompat="@drawable/king_of_hearts" />
 
     <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="77dp"
-        android:layout_height="62dp"
-        app:srcCompat="@drawable/nine_of_diamonds"
-        tools:layout_editor_absoluteX="367dp"
-        tools:layout_editor_absoluteY="286dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/foldBtn"
+        app:layout_constraintEnd_toStartOf="@+id/foldBtn"
+        app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/nine_of_diamonds" />
+
+    <TextView
+        android:id="@+id/BtnText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
